--- a/certification_nlw/pom.xml
+++ b/certification_nlw/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rocketseat</groupId>
 	<artifactId>certification_nlw</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>certification_nlw</name>
 	<description>Projeto utilizado no NLW</description>
 	<properties>
@@ -28,11 +28,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
