--- a/certification_nlw/src/main/resources/application.properties
+++ b/certification_nlw/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.application.name=certification_nlw
-
 server.port=8085
-spring.datasource.url=jdbc:postgresql://localhost:5434/pg_nlw
-spring.datasource.password=admin
-spring.datasource.username=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5433/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
